[package]
name = "spotify-genres"
description = "analysing the genres of tracks in a spotify playlist"
version = "0.1.0"
authors = ["Jonas Geschke <mail@yonny.de>"]
edition = "2018"
repository = "https://github.com/kegesch/spotify-genres-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = "0.7.0"
histogram = "0.6.9"
